--- a/index.html
+++ b/index.html
@@ -147,6 +147,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
+						<img class="paper-image" src="images/tmm21.png" width="200" height="130">
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>ForestDet: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation</div>
+						<div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Qian Zhang, Ming Yang, and Junsong Yuan</div>
+						<div class='paper-venue'>IEEE Transactions on Multimedia (<b>TMM</b>), 2021. (Extension of the conference paper)</div>
+						<div class='paper-link'>
+							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2008.05676v2.pdf">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
+							<!-- Place this tag where you want the button to render. -->
+							<a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>
+						</div>
+					</div>
+				</div>
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
 					  <img class="paper-image" src="images/cvpr20.png">
 					</div>
 					<div class='col-xs-9'>
