--- a/index.html
+++ b/index.html
@@ -263,19 +263,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>		
 			<div class="grid3-content">
 
-				<ul class="graid3-ul">
+				<ul class="graid3">
 					<li class="graid3-li">
-						Applied Scientist Intern, Amazon GO, Seattle.
+						<div class='col-xs-3'>
+							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50">
+						</div>
+						Applied Scientist Intern, Amazon GO, Seattle, WA.
 						<br>
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
 					<li class="graid3-li">
-						Research Intern, Applied AI Lab, Horizon Robotics, Silicon Valley.
+						<div class='col-xs-3'>
+							<img class="paper-image" src="images/horizon-robotics.png" width="100" height="100">
+						</div>
+						Research Intern, Applied AI Lab, Cupertino, CA.
 						<br>
 						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
 					<li class="graid3-li">
-						Research Intern, Horizon Robotics, Beijing.
+						Research Intern, Beijing.
 						<br>
 						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
@@ -294,7 +300,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020/2021/2022, ICCV 2021, AAAI 2021, IJCAI 2021, WACV 2021/2022 ACCV 2020
+						CVPR 2020/2021/2022, ICCV 2021, AAAI 2021/2022, IJCAI 2021, WACV 2021/2022 ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
