--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 
 				<ul class="graid3">
-					<li class="graid3-li">
+					<li class="graid3-li2">
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50">
 						</div>
@@ -272,7 +272,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<br>
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
-					<li class="graid3-li">
+					<li class="graid3-li2">
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/horizon-robotics.png" width="100" height="100">
 						</div>
@@ -280,7 +280,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<br>
 						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
-					<li class="graid3-li">
+					<li class="graid3-li2">
 						Research Intern, Beijing.
 						<br>
 						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
