--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-authors'><b>Jialian Wu</b>, Liangchen Song, Qian Zhang, Ming Yang, and Junsong Yuan</div>
 						<div class='paper-venue'>IEEE Transactions on Multimedia (<b>TMM</b>), 2021. (Extension of the conference paper)</div>
 						<div class='paper-link'>
-							<a class="btn btn-confirm" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9520281/metrics#metrics">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9520281">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/Forest_RCNN">Code</a>
 							<!-- Place this tag where you want the button to render. -->
 							<a class="github-button" href="https://github.com/JialianW/Forest_RCNN" data-color-scheme="no-preference: light; light: light; dark: light;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/Forest_RCNN on GitHub">Star</a>
