--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul class="graid3">
 					<li class="graid3-li2">
 						<div class='col-xs-3'>
-							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50">
+							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
 						</div>
 						Applied Scientist Intern, Amazon GO, Seattle, WA.
 						<br>
@@ -274,17 +274,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</li>
 					<li class="graid3-li2">
 						<div class='col-xs-3'>
-							<img class="paper-image" src="images/horizon-robotics.png" width="200" height="83">
+							<img class="paper-image" src="images/horizon-robotics.png" width="200" height="83" align="left">
 						</div>
 						Research Intern, Applied AI Lab, Cupertino, CA.
 						<br>
 						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
-					</li>
-					<li class="graid3-li2">
+						<br>
 						Research Intern, Beijing.
 						<br>
 						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
+<!--					<li class="graid3-li2">-->
+<!--						Research Intern, Beijing.-->
+<!--						<br>-->
+<!--						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.-->
+<!--					</li>-->
 				</ul>
 			</div>
 		</div>
