--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
 <!--				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>-->
 				<!-- <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> -->
-				[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
+				[<a href="./resume/CV_Jialian_Wu.pdf">CV </a>] [<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
 <!--				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]-->
-				[<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]
+<!--				[<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]-->
 			</p>
 	  <p style="padding: 10px 0px 0px 0px;">
-		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]
+<!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
+		  [<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]
 	  </p>
   </div>
 </div>
@@ -106,7 +107,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am a second-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						I am a third-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
 						My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
