--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-title'>Stacked Homography Transformations for Multi-View Pedestrian Detection</div>
 						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 						<div class='paper-venue'>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 (<b style="color:red;">Oral</b>).</div>
-						<!--						<div class='paper-link'>-->
-						<!--							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
-						<!--						</div>-->
+						<div class='paper-link'>
+							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/ICCV2021_liangchen.pdf">PDF</a>
+						</div>
 					</div>
 				</div>
 
@@ -233,9 +233,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-title'>Handling Difficult Labels for Multi-label Image Classification via Uncertainty Distillation</div>
 						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 						<div class='paper-venue'>ACM International Conference on Multimedia (<b>ACM MM</b>), 2021.</div>
-						<!--						<div class='paper-link'>-->
-						<!--							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/aaai21_song.pdf">PDF</a>-->
-						<!--						</div>-->
+						<div class='paper-link'>
+							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/ACM_MM2021_liangchen-1.pdf">PDF</a>
+						</div>
 					</div>
 				</div>
 
