--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--					<li id="Me" class="active" onclick="func('Me')"><a href="#me" class="scroll">Me</a></li>-->
 					<li id="Education" onclick="func('Education')"><a href="#education" class="scroll">Bio</a></li>
 					<li id="Publication" onclick="func('Publication')"><a href="#publication" class="scroll">Publication</a></li>
-					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Experience</a></li>
-					<li id="Professional_Activities" onclick="func('Professional Activities')"><a href="#Professional_Activities" class="scroll">Professional Activities</a></li>
+					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Internships</a></li>
+					<li id="Professional_Services" onclick="func('Professional Services')"><a href="#Professional_Services" class="scroll">Professional Services</a></li>
 <!--					<li id="Activity" onclick="func('Activity')"><a href="#activity" class="scroll">Activity</a></li>-->
 					<!-- <li id="Contact" onclick="func('Contact')"><a href="#contact" class="scroll">Contact</a></li> -->
 				</ul>
@@ -220,7 +220,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-authors'>Liangchen Song, <b>Jialian Wu</b>, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan</div>
 						<div class='paper-venue'>IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 (<b style="color:red;">Oral</b>).</div>
 						<div class='paper-link'>
-							<a class="btn btn-confirm" target="_blank" href="https://cse.buffalo.edu/~jsyuan/papers/2021/ICCV2021_liangchen.pdf">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Song_Stacked_Homography_Transformations_for_Multi-View_Pedestrian_Detection_ICCV_2021_paper.pdf">PDF</a>
 						</div>
 					</div>
 				</div>
@@ -294,9 +294,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 
-				<div class="grid3" id="Professional_Activities" style="background:#ffffff">
-			<div class="grid3-header" id="Professional_Activities">
-				<h3>Professional Activities</h3>
+				<div class="grid3" id="Professional_Services" style="background:#ffffff">
+			<div class="grid3-header" id="Professional_Services">
+				<h3>Professional Services</h3>
 				<br/>
 			</div>
 			<div class="grid3-content">
@@ -305,7 +305,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020/2021/2022, ICCV 2021, AAAI 2021/2022, IJCAI 2021, WACV 2021/2022 ACCV 2020
+						CVPR 2020/2021/2022, ICCV 2021, AAAI 2021/2022, IJCAI 2021/2022, WACV 2021/2022 ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
