--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am a third-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						I am a third-year Ph.D. student at State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
 						My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
