--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<ul>
 <!--					<li id="Me" class="active" onclick="func('Me')"><a href="#me" class="scroll">Me</a></li>-->
 					<li id="Education" onclick="func('Education')"><a href="#education" class="scroll">Bio</a></li>
-					<li id="Publication" onclick="func('Publication')"><a href="#publication" class="scroll">Publication</a></li>
+					<li id="Publication" onclick="func('Publication')"><a href="#publication" class="scroll">Research</a></li>
 					<li id="Experience" onclick="func('Experience')"><a href="#experience" class="scroll">Internships</a></li>
 					<li id="Professional_Services" onclick="func('Professional Services')"><a href="#Professional_Services" class="scroll">Professional Services</a></li>
 <!--					<li id="Activity" onclick="func('Activity')"><a href="#activity" class="scroll">Activity</a></li>-->
@@ -121,9 +121,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		<div class="grid3" id="publication">
 			<div class="grid3-header">
-				<h3>Publications</h3>
+				<h3>Research</h3>
 			</div>
 			<div class="grid3-content">
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
+						<img class="paper-image" style="width: 93%" src="images/EfficientVIS.jpg">
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>Efficient Video Instance Segmentation via Tracklet Query and Proposal</div>
+						<div class='paper-authors'><b>Jialian Wu</b>, Sudhir Yarram, Hui Liang, Tian Lan, Junsong Yuan, Jayan Eledath, and Gerard Medioni</div>
+						<div class='paper-venue'>Tech report, 2022</div>
+						<div class='paper-link'>
+<!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
+							<a class="btn btn-confirm" target="_blank" href="">PDF (Coming)</a>
+							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>
+<!--							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>-->
+							<!-- Place this tag where you want the button to render. -->
+							<!-- Place this tag where you want the button to render. -->
+							<!-- Place this tag where you want the button to render. -->
+<!--							<a class="github-button" href="https://github.com/JialianW/TraDeS" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/TraDeS on GitHub">Star</a>-->
+							<!--							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>-->
+						</div>
+					</div>
+				</div>
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
