--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
 						</div>
-						Applied Scientist Intern, Amazon GO, Seattle, WA.
+						Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
@@ -299,11 +299,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/horizon-robotics.png" width="200" height="83" align="left">
 						</div>
-						Research Intern, Applied AI Lab, Cupertino, CA.
+						Research Intern, Applied AI Lab, Cupertino, CA
 						<br>
 						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 						<br>
-						Research Intern, Beijing.
+						Research Intern, Beijing
 						<br>
 						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
 					</li>
