--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class='col-xs-9'>
 						<div class='paper-title'>Efficient Video Instance Segmentation via Tracklet Query and Proposal</div>
 						<div class='paper-authors'><b>Jialian Wu</b>, Sudhir Yarram, Hui Liang, Tian Lan, Junsong Yuan, Jayan Eledath, and Gerard Medioni</div>
-						<div class='paper-venue'>Tech report, 2022</div>
+						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</div>
 						<div class='paper-link'>
 <!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
 							<a class="btn btn-confirm" target="_blank" href="">PDF (Coming)</a>
