--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</div>
 						<div class='paper-link'>
 <!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
+							<a class="btn btn-confirm" target="_blank" href="projects/EfficientVIS.html">Project page</a>
+							<a class="btn btn-confirm" target="_blank" href="https://youtu.be/sSPMzgtMKCE">Video</a>
 							<a class="btn btn-confirm" target="_blank" href="">PDF (Coming)</a>
 							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>-->
