--- a/index.html
+++ b/index.html
@@ -329,8 +329,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020/2021/2022, ICCV 2021, ECCV 2022, AAAI 2021/2022, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022,
-						<br>ACCV 2020
+						CVPR 2020/2021/2022, ICCV 2021, ECCV 2022, AAAI 2021/2022, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
