--- a/projects/EfficientVIS.html
+++ b/projects/EfficientVIS.html
@@ -41,12 +41,12 @@
 				<A>Jayan Eledath,</A>
 			</div>
 			<div class='author'>
-				<A>Gerard Medioni</A>
+				<A>G&eacuterard Medioni</A>
 			</div>
 		</div>
 		<br>
-		<div class="publication" style="width:95%">
-		<A>State University of New York at Buffalo &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; Amazon</A>
+		<div class="affiliation">
+		<A><sup>1</sup>State University of New York at Buffalo &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; <sup>2</sup>Amazon</A>
 		</div>
 		<br>
 		<div class="publication" style="width:95%">
@@ -92,17 +92,7 @@
 			<div class='desp'>
 				<p style="text-align:justify">
 					Video Instance Segmentation (VIS) aims to simultaneously classify, segment, and track multiple object instances in
-					videos. Recent clip-level VIS takes a short video clip as input
-					each time showing stronger performance than frame-level
-					VIS (tracking-by-segmentation), as more temporal context
-					from multiple frames is utilized. Yet, most clip-level methods are neither end-to-end learnable nor real-time. These
-					limitations are addressed by the recent VIS transformer
-					(VisTR) which performs VIS end-to-end within a clip.
-					However, VisTR suffers from long training time due to its
-					frame-wise dense attention. In addition, VisTR is not fully
-					end-to-end learnable in multiple video clips as it requires
-					a hand-crafted data association to link instance tracklets
-					between successive clips. This paper proposes EfficientVIS,
+					videos. This paper proposes EfficientVIS,
 					a fully end-to-end framework with efficient training and inference. At the core are tracklet query and tracklet proposal
 					that associate and segment regions-of-interest (RoIs) across
 					space and time by an iterative query-video interaction. We
@@ -166,6 +156,14 @@
 <!--&lt;!&ndash;			<p>[5] P. Isola, J.Y. Zhu, T. Zhou, A.A. Efros. Image-to-image translation with conditional adversarial networks. CVPR 2017.</p>&ndash;&gt;-->
 <!--		  </div>-->
 <!--	</div>-->
+
+			<div class='citation_sec'>
+				<h2>Citation</h2>
+				<p class='bibtex'>@inproceedings{Wu2022EfficientVIS,
+title={Efficient Video Instance Segmentation via Tracklet Query and Proposal},
+author={Wu, Jialian and Yarram, Sudhir and Liang, Hui and Lan, Tian and Yuan, Junsong and Eledath, Jayan and Medioni, Gerard},
+booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+year={2022}}</p>
 		
 		
 		<br></br>
