--- a/index.html
+++ b/index.html
@@ -297,16 +297,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<br>
 						<em>Oct-Dec, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
+					<br>
 
 					<li class="graid3-li2">
 						<div class='col-xs-3'>
-							<img class="paper-image" src="images/Microsoft.png" width="60" height="50" align="left">
+							<img class="paper-image" src="images/1.png" align="left">
 						</div>
 						Incoming Research Intern, Microfost Research, Redmond, WA
 						<br>
 						<em>May-August, 2022.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=vJWEw_8AAAAJ&hl=en">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/index.html/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>.
 					</li>
 
+					<br>
 					<li class="graid3-li2">
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
@@ -316,9 +318,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
 
+					<br>
 					<li class="graid3-li2">
 						<div class='col-xs-3'>
-							<img class="paper-image" src="images/horizon-robotics.png" width="200" height="83" align="left">
+							<img class="paper-image" src="images/horizon-robotics.png" align="left">
 						</div>
 						Research Intern, Applied AI Lab, Cupertino, CA
 						<br>
