--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						Incoming Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
-						<em>Oct-Dec, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
+						<em>Fall, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
 					<br>
 
