--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						Incoming Research Intern, Microsoft Research, Redmond, WA
 						<br>
-						<em>May-August, 2022.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=vJWEw_8AAAAJ&hl=en">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/index.html/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>.
+						<em>May-August, 2022.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=vJWEw_8AAAAJ&hl=en">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>.
 					</li>
 
 					<br>
