--- a/projects/EfficientVIS.html
+++ b/projects/EfficientVIS.html
@@ -77,7 +77,7 @@
 		<div class="papercode" style="width:95%">
 			<br>
 			<div class='paper'>
-			<a target="_blank" ><img src="../images/pdf.png"  title="name" style="width:4%;vertical-align:middle;padding: 0 5px 10px 0"/>Paper (Coming)</a>
+			<a target="_blank" href="https://arxiv.org/pdf/2203.01853.pdf"><img src="../images/pdf.png"  title="name" style="width:4%;vertical-align:middle;padding: 0 5px 10px 0"/>Paper</a>
 			</div>
 			<div class='paper'>
 			<a target="_blank" ><img src="../images/github2.png" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>Code(Coming)</a>
