--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
 							<a class="btn btn-confirm" target="_blank" href="projects/EfficientVIS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://youtu.be/sSPMzgtMKCE">Video</a>
-							<a class="btn btn-confirm" target="_blank" href="">PDF (Coming)</a>
+							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2203.01853.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>-->
 							<!-- Place this tag where you want the button to render. -->
