--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
 <!--				<a target="_blank" href="https://github.com/chenwydj"><img src="./images/github.png" title="name" style="width:5%"/></a>-->
 				<!-- <a target="_blank" href="mailto:wuyang.chen@tamu.edu"><img src="./images/email.png" title="name" style="width:5%"/></a> -->
-				[<a href="./resume/CV_Jialian_Wu.pdf">CV </a>] [<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>] [<a href="./images/wechat.jpg">Wechat</a>]
+				[<a href="./resume/CV_Jialian_Wu.pdf">CV </a>] [<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
 <!--				[<a href="https://drive.google.com/file/d/1sNRUbglGHZbQ1UEmP5DOuuHgj0Glq1X6/view?usp=sharing">Curriculum Vitae</a>]-->
 <!--				[<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]-->
 			</p>
