--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/1.png" align="left">
 						</div>
-						Incoming Research Intern, Microsoft Research, Redmond, WA
+						Research Intern, Microsoft Research, Redmond, WA
 						<br>
-						<em>May-August, 2022.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=vJWEw_8AAAAJ&hl=en">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>.
+						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>.
 					</li>
 
 					<br>
