--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Journal Reviewer
 						<br>
-						IEEE Transactions on Image Processing, IEEE Transactions on Circuits and Systems for
+						IEEE Transactions on Image Processing, IEEE Transactions on Multimedia, IEEE Transactions on Circuits and Systems for
 						Video Technology, etc
 
 					</li>
