--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
 							<a class="btn btn-confirm" target="_blank" href="projects/EfficientVIS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://youtu.be/sSPMzgtMKCE">Video</a>
-							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2203.01853.pdf">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Wu_Efficient_Video_Instance_Segmentation_via_Tracklet_Query_and_Proposal_CVPR_2022_paper.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>
 <!--							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>-->
 							<!-- Place this tag where you want the button to render. -->
@@ -159,6 +159,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2021</div>
 						<div class='paper-link'>
 							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>
+							<a class="btn btn-confirm" target="_blank" href="https://www.youtube.com/watch?v=oGNtSFHRZJA">Video</a>
 							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Wu_Track_To_Detect_and_Segment_An_Online_Multi-Object_Tracker_CVPR_2021_paper.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>
 							<!-- Place this tag where you want the button to render. -->
