--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						Research Intern, Microsoft Research, Redmond, WA
 						<br>
-						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>.
+						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
 					</li>
 
 					<br>
