--- a/projects/EfficientVIS.html
+++ b/projects/EfficientVIS.html
@@ -161,7 +161,8 @@
 				<h2>Citation</h2>
 				<p class='bibtex'>@inproceedings{Wu2022EfficientVIS,
 title={Efficient Video Instance Segmentation via Tracklet Query and Proposal},
-author={Wu, Jialian and Yarram, Sudhir and Liang, Hui and Lan, Tian and Yuan, Junsong and Eledath, Jayan and Medioni, Gerard},
+author={Wu, Jialian and Yarram, Sudhir and Liang, Hui and Lan, Tian and Yuan,
+					Junsong and Eledath, Jayan and Medioni, Gerard},
 booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
 year={2022}}</p>
 		
