--- a/projects/music.html
+++ b/projects/music.html
@@ -55,8 +55,9 @@
 
         <div class="intro">
             <A>Tommy is an Australian fingerstyle guitar player. His covered songs are mostly upbeat, while
-            below there are two gentle ones that I like most. Fun to know he wrote a song called "The Finger Lakes",
-                while the finger lakes located in rural area NY is one of my favorite places to travel:)
+            below there are two gentle ones that I like most.
+<!--                Fun to know he wrote a song called "The Finger Lakes",-->
+<!--                while the finger lakes located in rural area NY is one of my favorite places to travel:)-->
             </A>
         </div>
         <br>
@@ -116,19 +117,19 @@
             <div style="clear:both;"></div>
         </div>
 
-        <div class="name">
-            <h2>AC/DC</h2>
-        </div>
-        <div class="intro">
-            <A> Being at AC/DC's concert would be one of the biggest dreams of mine.
-                Feel like this is the most shocking live concert I've ever seen.
-            </A>
-        </div>
-        <br>
+<!--        <div class="name">-->
+<!--            <h2>AC/DC</h2>-->
+<!--        </div>-->
+<!--        <div class="intro">-->
+<!--            <A> Being at AC/DC's concert would be one of the biggest dreams of mine.-->
+<!--                Feel like this is the most shocking live concert I've ever seen.-->
+<!--            </A>-->
+<!--        </div>-->
+<!--        <br>-->
 
-        <div class="video" style="width:95%">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/RHpClGAAvpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+<!--        <div class="video" style="width:95%">-->
+<!--        <iframe width="560" height="315" src="https://www.youtube.com/embed/RHpClGAAvpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<!--        </div>-->
 
                 <br></br>
                 <p class="banner"align="center">Return to <a href="https://jialianwu.com/">Homepage</a></p>
