--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='col-xs-3'>
 							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
 						</div>
-						Incoming Applied Scientist Intern, Amazon, Seattle, WA
+						Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
 						<em>Fall, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
 					</li>
