--- a/index.html
+++ b/index.html
@@ -301,36 +301,69 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<br>
 
 					<li class="graid3-li2">
-						<div class='col-xs-3'>
-							<img class="paper-image" src="images/1.png" align="left">
-						</div>
-						Research Intern, Microsoft Research, Redmond, WA
+						<div class='div1'>
+							<img class="img" src="images/1.png" align="left">
+							<div class="div2">
+							Research Intern, Microsoft Research, Redmond, WA
 						<br>
-						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
+						<b>Project: Multimodel - Vision and Language</b>
+						<br>
+						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, <br>Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
+						</div>
+						</div>
 					</li>
 
 					<br>
 					<li class="graid3-li2">
-						<div class='col-xs-3'>
-							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
-						</div>
+						<div class='div1'>
+							<img class="img" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
+							<div class="div2">
 						Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
+						<b>Project: Video Instance Segmentatino (CVPR'22)</b>
+						<br>
 						<em>May-August, 2021.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
+							</div>
+						</div>
 					</li>
 
 					<br>
+<!--					<li class="graid3-li2">-->
+<!--						<div class='col-xs-3'>-->
+<!--							<img class="paper-image" src="images/horizon-robotics.png" align="left">-->
+<!--						</div>-->
+<!--						Research Intern, Applied AI Lab, Cupertino, CA-->
+<!--						<br>-->
+<!--						<b>Project: Multi-Object Tracking (CVPR'21)</b>-->
+<!--						<br>-->
+<!--						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.-->
+<!--						<br>-->
+<!--						Research Intern, Beijing-->
+<!--						<br>-->
+<!--						<b>Project: Pedestrian Detection (MM'20)</b>-->
+<!--						<br>-->
+<!--						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.-->
+<!--					</li>-->
+
+
 					<li class="graid3-li2">
-						<div class='col-xs-3'>
-							<img class="paper-image" src="images/horizon-robotics.png" align="left">
+					<div class="div1">
+						<img class="img" src="images/horizon-robotics.png" align="left">
+						<div class="div2">
+							Research Intern, Applied AI Lab, Cupertino, CA
+							<br>
+							<b>Project: Multi-Object Tracking (CVPR'21)</b>
+							<br>
+							<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
+							<br>
+							Research Intern, Beijing
+							<br>
+							<b>Project: Pedestrian Detection (MM'20)</b>
+							<br>
+							<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
+
 						</div>
-						Research Intern, Applied AI Lab, Cupertino, CA
-						<br>
-						<em>May-August, 2020.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
-						<br>
-						Research Intern, Beijing
-						<br>
-						<em>May-August, 2018.</em> Work with Dr. <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a> and Dr. <a href="https://scholar.google.com/citations?user=uBHJx08AAAAJ&hl=en">Ming Yang</a>.
+					</div>
 					</li>
 <!--					<li class="graid3-li2">-->
 <!--						Research Intern, Beijing.-->
@@ -352,7 +385,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li class="graid3-li">
 						Conference Reviewer
 						<br>
-						CVPR 2020/2021/2022, ICCV 2021, ECCV 2022, AAAI 2021/2022, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
+						CVPR 2020/2021/2022, ICCV 2021, ECCV 2022, AAAI 2021/2022/2023, IJCAI 2021/2022, WACV 2021/2022, ICPR 2022, ACCV 2020
 					</li>
 					<li class="graid3-li">
 						Journal Reviewer
