--- a/index.html
+++ b/index.html
@@ -290,13 +290,23 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="grid3-content">
 
 				<ul class="graid3">
+<!--					<li class="graid3-li2">-->
+<!--						<div class='col-xs-3'>-->
+<!--							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">-->
+<!--						</div>-->
+<!--						Applied Scientist Intern, Amazon, Seattle, WA-->
+<!--						<br>-->
+<!--						<em>Fall, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.-->
+<!--					</li>-->
 					<li class="graid3-li2">
-						<div class='col-xs-3'>
-							<img class="paper-image" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
-						</div>
-						Applied Scientist Intern, Amazon, Seattle, WA
+						<div class='div1'>
+							<img class="img" src="images/amazon-science-logo.svg" width="100" height="50" align="left">
+							<div class="div2">
+							Applied Scientist Intern, Amazon, Seattle, WA
 						<br>
-						<em>Fall, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
+						<em>August-Oct, 2022.</em> Work with Dr. <a href="https://cs.stanford.edu/~taranlan/">Tian Lan</a> and Dr. <a href="https://sites.google.com/site/seraphlh/">Hui Liang</a>.
+							</div>
+						</div>
 					</li>
 					<br>
 
@@ -308,7 +318,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<br>
 						<b>Project: Multimodel - Vision and Language</b>
 						<br>
-						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, <br>Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
+						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, <br> Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
 						</div>
 						</div>
 					</li>
