--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<br>
 				State University of New York at Buffalo
 				<br>
-				jialianw at buffalo dot edu
+				Email: jialianw at buffalo dot edu
 			</p>
 			<p style="padding: 10px 0px 0px 0px;">
 <!--				<a target="_blank" href="https://scholar.google.com/citations?user=RHOcEtsAAAAJ&hl=en"><img src="./images/gscholar.png" title="name" style="width:5%"/></a>-->
@@ -89,6 +89,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  <p style="padding: 10px 0px 0px 0px;">
 <!--		  [<a href="./resume/Resume-jialianwu.pdf">Curriculum Vitae</a>]-->
 		  [<a href="https://scholar.google.com/citations?user=8FpPdYgAAAAJ&hl=en">Google Scholar</a>]
+	  </p>
+	  <p style="color:red">
+		  I'm on job market for full-time positions staring from Summer 2023.
 	  </p>
   </div>
 </div>
@@ -107,7 +110,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="grid3-content">
 					<ul class="graid3-ul" style="list-style-type:none">
-						I am a final-year Ph.D. candidate at State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
+						<br>I am a final-year Ph.D. candidate at State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
 						My current research interest lies in object-centric video analysis including detection, segmentation, and tracking.
