--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
   <div class="image">
 <!--    <img src="./images/jialian.jpg">-->
-	  <img src="./images/IMG-6659.JPG" style="width: 100%">
+	  <img src="./images/jialian2.jpg" style="width: 100%">
 
   </div>
   <div class="text">
