--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<br>I am a final-year Ph.D. candidate at State University of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 						Before that, I got B.Eng. from Tianjin University, where I continued one-year M.Eng. study and left for UB before finishing the degree.
 						I received the <a href="https://engineering.buffalo.edu/computer-science-engineering/people/hall-of-fame/students/cse-graduate-student-award-recipients.html">Best CSE First Year Achiever Award</a> from UB.
-						My previous research experiences are object-centric video analysis including detection, segmentation, and tracking; object understanding in vision and language.
+						My previous research experience is object-centric video analysis including detection, segmentation, and tracking; object understanding in vision and language.
 
 					</ul>
 			</div>
