--- a/projects/music.html
+++ b/projects/music.html
@@ -20,7 +20,7 @@
     <div class="content"><br>
         <br>
         <div class="abstract_sec">
-            <h2> I started this page for sharing my favorite musics. Hope you can enjoy!</h2>
+            <h2> I created this page for sharing my favorite musics. Hope you will enjoy!</h2>
 <!--            <A> I start this page for sharing my favorite musics. Hope you can enjoy them!</A>-->
         </div>
 
@@ -77,7 +77,7 @@
             <h2>The Beatles</h2>
         </div>
         <div class="intro">
-            <A> I literally love every song of The Beatles!! The Beatles were an English rock band formed in Liverpool in 1960.
+            <A> I love every song of The Beatles!! The Beatles were an English rock band formed in Liverpool in 1960.
                 They are regarded as <a href="https://en.wikipedia.org/wiki/Cultural_impact_of_the_Beatles">the most influential band of all time. </a>
 
             </A>
@@ -85,7 +85,8 @@
         <br>
         <div style="width:1200px;">
             <div style="position:relative; left:-200px; float: left">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wXTJBr9tt8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KQetemT1sWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/wXTJBr9tt8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
             </div>
             <div style="position:relative; right:260px;float: right">
@@ -100,7 +101,7 @@
         </div>
         <div class="intro">
             <A> Jakob is an American country-style songwriter who seems to be rarely known by people, but you must know his
-                father, Bob Dylan. I grew up with the "Seeing Things" album and still listen it today. This talented man wrote
+                father, Bob Dylan. I started listening to the "Seeing Things" album since high school and still listen it today. This talented man wrote
                 so many touching songs that definitely deserve much more credits.
 
             </A>
@@ -116,6 +117,21 @@
             </div>
             <div style="clear:both;"></div>
         </div>
+
+<!--        <div class="name">-->
+<!--            <h2>Ed Sheeran</h2>-->
+<!--        </div>-->
+<!--        <div class="intro">-->
+<!--        <br>-->
+<!--        <div style="width:1200px;">-->
+<!--            <div style="position:relative; left:-200px; float: left">-->
+<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/6B9J3lEyffA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<!--            </div>-->
+<!--            <div style="position:relative; right:260px;float: right">-->
+<!--                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZgjradAgY-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<!--            </div>-->
+<!--            <div style="clear:both;"></div>-->
+<!--        </div>-->
 
 <!--        <div class="name">-->
 <!--            <h2>AC/DC</h2>-->
