--- a/index.html
+++ b/index.html
@@ -130,11 +130,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
+						<img class="paper-image" style="width: 100%" src="images/GRiT.png" >
+					</div>
+					<div class='col-xs-9'>
+						<div class='paper-title'>GRiT: A Generative Region-to-text Transformer for Object Understanding</div>
+						<div class='paper-authors'><b>Jialian Wu</b>, Jianfeng Wang, Zhengyuan Yang, Zhe Gan, Zicheng Liu, Junsong Yuan, <br/> and Lijuan Wang</div>
+						<div class='paper-venue'>Technical report, 2022</div>
+						<div class='paper-link'>
+							<a class="btn btn-confirm" target="_blank" href="">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
+							<a class="github-button" href="https://github.com/JialianW/GRiT" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/GRiT on GitHub">Star</a>
+						</div>
+					</div>
+				</div>
+
+
+				<div class='row publication-entity'>
+					<div class='col-xs-3'>
 						<img class="paper-image" style="width: 120%" src="images/EfficientVIS.gif">
 					</div>
 					<div class='col-xs-9'>
 						<div class='paper-title'>Efficient Video Instance Segmentation via Tracklet Query and Proposal</div>
-						<div class='paper-authors'><b>Jialian Wu</b>, Sudhir Yarram, Hui Liang, Tian Lan, Junsong Yuan, Jayan Eledath, and Gerard Medioni</div>
+						<div class='paper-authors'><b>Jialian Wu</b>, Sudhir Yarram, Hui Liang, Tian Lan, Junsong Yuan, Jayan Eledath, <br/>and Gerard Medioni</div>
 						<div class='paper-venue'>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</div>
 						<div class='paper-link'>
 <!--							<a class="btn btn-confirm" target="_blank" href="projects/TraDeS.html">Project page</a>-->
@@ -154,7 +171,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class='row publication-entity'>
 					<div class='col-xs-3'>
-						<img class="paper-image" style="width: 93%" src="images/TraDeS.gif">
+						<img class="paper-image" style="width: 100%" src="images/TraDeS.gif">
 					</div>
 					<div class='col-xs-9'>
 						<div class='paper-title'>Track to Detect and Segment: An Online Multi-Object Tracker</div>
