--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="btn btn-confirm" target="_blank" href="projects/EfficientVIS.html">Project page</a>
 							<a class="btn btn-confirm" target="_blank" href="https://youtu.be/sSPMzgtMKCE">Video</a>
 							<a class="btn btn-confirm" target="_blank" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Wu_Efficient_Video_Instance_Segmentation_via_Tracklet_Query_and_Proposal_CVPR_2022_paper.pdf">PDF</a>
-							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>
+<!--							<a class="btn btn-confirm" target="_blank" href="">Code (Coming)</a>-->
 <!--							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/TraDeS">Code</a>-->
 							<!-- Place this tag where you want the button to render. -->
 							<!-- Place this tag where you want the button to render. -->
