--- a/projects/EfficientVIS.html
+++ b/projects/EfficientVIS.html
@@ -79,9 +79,9 @@
 			<div class='paper'>
 			<a target="_blank" href="https://arxiv.org/pdf/2203.01853.pdf"><img src="../images/pdf.png"  title="name" style="width:4%;vertical-align:middle;padding: 0 5px 10px 0"/>Paper</a>
 			</div>
-			<div class='paper'>
-			<a target="_blank" ><img src="../images/github2.png" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>Code(Coming)</a>
-			</div>
+<!--			<div class='paper'>-->
+<!--			<a target="_blank" ><img src="../images/github2.png" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>Code(Coming)</a>-->
+<!--			</div>-->
 <!--			<div class='paper'>-->
 <!--				<a target="_blank" href="https://www.bilibili.com/video/BV12U4y1p7wg"><img src="../images/bilibili.jpg" title="name" style="width:5%;vertical-align:middle;padding: 0 5px 12px 0"/>bilibili</a>-->
 <!--			</div>-->
