--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class='paper-authors'><b>Jialian Wu</b>, Jianfeng Wang, Zhengyuan Yang, Zhe Gan, Zicheng Liu, Junsong Yuan, and Lijuan Wang</div>
 						<div class='paper-venue'>Technical report, 2022</div>
 						<div class='paper-link'>
-							<a class="btn btn-confirm" target="_blank" href="">PDF</a>
+							<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/2212.00280.pdf">PDF</a>
 							<a class="btn btn-confirm" target="_blank" href="https://github.com/JialianW/GRiT">Code</a>
 							<a class="github-button" href="https://github.com/JialianW/GRiT" data-color-scheme="no-preference: light; light: light; dark: light;" style="padding: 0px 0px 40px 0px;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star JialianW/GRiT on GitHub">Star</a>
 						</div>
@@ -336,7 +336,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="div2">
 							Research Intern, Microsoft Research, Redmond, WA
 						<br>
-						<b>Project: Multimodel - Vision and Language</b>
+						<b>Project: VL Open-set Object Understanding</b>
 						<br>
 						<em>May-August, 2022.</em> Work with Dr. <a href="https://amsword.github.io/">Jianfeng Wang</a>, Dr. <a href="https://zhegan27.github.io/">Zhe Gan</a>, <br> Dr. <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, Dr. <a href="https://zyang-ur.github.io//">Zhengyuan Yang</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/zliu/">Zicheng Liu</a>.
 						</div>
